# DeadPad-CLI-Text-Editor

./: .gitignore  LICENSE  deadpad.py  main.py  pyproject.toml  readme.md
deadpad/: __init__.py
deadpad/extensions/: ext_python.py
deadpad/extensions/python/: __init__.py
deadpad/parts/: document.py  extension.py  input_handler.py  keys.py  linux_input.py  textscreen.py  themes.py  windows_input.py
deadpad/parts/input/: input_handler.py  keys.py  linux_input.py  windows_input.py
deadpad/parts/input/wininp_c/: wininp.cpp  wininp.exp  wininp.lib  wininp.pyd  wininp.pyi
deadpad/parts/render/: document.py  textscreen.py
deadpad/themes/: default.json
parts/: document.py  input_handler.py  linux_input.py  textscreen.py  windows_input.py
themes/: default.json
