[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "deadpad"
version = "0.2.1"
authors = [
  { name="William L." },
]
description = "A customizeable lightweight CLI/TUI text editor made without curses or any TUI framework."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
deadpad = "deadpad:main"

[project.urls]
Homepage = "https://github.com/FrewtyPebbles/DeadPad-CLI-Text-Editor"
Issues = "https://github.com/FrewtyPebbles/DeadPad-CLI-Text-Editor/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["./main.py"]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.*"]